[gd_scene load_steps=29 format=3 uid="uid://di83f7tg1t2p1"]

[ext_resource type="Script" path="res://Scripts/Aliados/Cuki.gd" id="1_pgr52"]
[ext_resource type="Texture2D" uid="uid://dicp13ihj0xno" path="res://Sprites/Aliados/Cuki/Cuki.png" id="2_7snix"]
[ext_resource type="Texture2D" uid="uid://ksv0uls0ckvx" path="res://Sprites/Efectos/Slash.png" id="3_h677d"]
[ext_resource type="PackedScene" uid="uid://fyyh6totk12a" path="res://Componentes/Salud.tscn" id="4_xqo2r"]
[ext_resource type="PackedScene" uid="uid://6wpanuw2c5wd" path="res://Componentes/ElementalState.tscn" id="5_eikpf"]
[ext_resource type="PackedScene" uid="uid://hum6y5m0ols4" path="res://Componentes/MaquinaEstados.tscn" id="6_ioxyp"]
[ext_resource type="Script" path="res://Scripts/Estados/JugadorIdle.gd" id="7_buxvn"]
[ext_resource type="Script" path="res://Scripts/Estados/JugadorMovimiento.gd" id="8_qpe61"]
[ext_resource type="Script" path="res://Scripts/Estados/JugadorAtaque.gd" id="9_moob1"]
[ext_resource type="Script" path="res://Scripts/Estados/JugadorDash.gd" id="10_6jemd"]
[ext_resource type="Script" path="res://Scripts/Estados/JugadorDashAtt.gd" id="11_uyyhx"]
[ext_resource type="Script" path="res://Scripts/Estados/JugadorCharging.gd" id="12_oiriu"]
[ext_resource type="Script" path="res://Scripts/Estados/JugadorAtaqueP.gd" id="13_dhhti"]
[ext_resource type="Script" path="res://Scripts/Estados/JugadorHerido.gd" id="14_5ch58"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(21.8333, 43.3333)

[sub_resource type="CircleShape2D" id="CircleShape2D_itqlg"]
radius = 39.3559

[sub_resource type="CircleShape2D" id="9"]
radius = 12.0

[sub_resource type="CircleShape2D" id="8"]
radius = 10.6667

[sub_resource type="Animation" id="Animation_ogtfx"]
resource_name = "ChargedAttack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CukiSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -7.33333), Vector2(0, -48), Vector2(0, -7.33333)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CukiSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5x0mo"]
resource_name = "ChargingAttack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CukiSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_cxf5s"]
resource_name = "Dash"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CukiSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CukiSprite:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.49),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"prepare_spin"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CukiSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(0.113725, 1, 0.117647, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="4"]
resource_name = "Hit_1"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CukiSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.35),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack_node/Bat_zone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack_node/Bat_zone/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.35, 0.45),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Attack_node/Bat_zone/Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_5xmtp"]
resource_name = "Hit_2"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CukiSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack_node/Bat_zone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack_node/Bat_zone/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 1, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Attack_node/Bat_zone/Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_fmjm6"]
resource_name = "Hurt"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CukiSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack_node/Bat_zone/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack_node/Bat_zone/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CukiSprite:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CukiSprite:modulate")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CukiSprite:self_modulate")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.501961), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CukiSprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -7.33333)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CukiSprite:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="5"]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CukiSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CukiSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CukiSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jufp3"]
resource_name = "Spin_attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CukiSprite:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.26573, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack_node/Spin_attack/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CukiSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="6"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CukiSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y1pv4"]
_data = {
"ChargedAttack": SubResource("Animation_ogtfx"),
"ChargingAttack": SubResource("Animation_5x0mo"),
"Dash": SubResource("Animation_cxf5s"),
"Hit_1": SubResource("4"),
"Hit_2": SubResource("Animation_5xmtp"),
"Hurt": SubResource("Animation_fmjm6"),
"Idle": SubResource("5"),
"Spin_attack": SubResource("Animation_jufp3"),
"Walking": SubResource("6")
}

[node name="CukiME" type="CharacterBody2D" groups=["Player"]]
y_sort_enabled = true
texture_filter = 1
scale = Vector2(1.5, 1.5)
collision_mask = 20
motion_mode = 1
script = ExtResource("1_pgr52")

[node name="CukiSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -7.33333)
texture = ExtResource("2_7snix")
hframes = 3
vframes = 5
frame = 2

[node name="Attack_node" type="Node2D" parent="."]
z_as_relative = false
y_sort_enabled = true
position = Vector2(-3.27534e-05, 0)

[node name="Bat_zone" type="Area2D" parent="Attack_node" groups=["C_attack"]]
position = Vector2(-1.90735e-06, 0)
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_node/Bat_zone"]
position = Vector2(29.75, -0.333332)
shape = SubResource("1")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="Attack_node/Bat_zone"]
visible = false
z_as_relative = false
y_sort_enabled = true
position = Vector2(25.3334, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_h677d")
hframes = 3
frame = 1

[node name="Spin_attack" type="Area2D" parent="Attack_node" groups=["C_attack"]]
position = Vector2(3.27534e-05, 0)
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_node/Spin_attack"]
position = Vector2(-1.33333, -2.66667)
shape = SubResource("CircleShape2D_itqlg")

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("9")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("8")

[node name="Animaciones" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y1pv4")
}

[node name="Salud" parent="." instance=ExtResource("4_xqo2r")]
max_amount = 20

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="ElementalState" parent="." instance=ExtResource("5_eikpf")]

[node name="MaquinaEstados" parent="." node_paths=PackedStringArray("estado_defecto") instance=ExtResource("6_ioxyp")]
estado_defecto = NodePath("JugadorIdle")

[node name="JugadorIdle" type="Node" parent="MaquinaEstados"]
script = ExtResource("7_buxvn")

[node name="JugadorMovim" type="Node" parent="MaquinaEstados"]
script = ExtResource("8_qpe61")

[node name="JugadorAtaque" type="Node" parent="MaquinaEstados"]
script = ExtResource("9_moob1")

[node name="JugadorDash" type="Node" parent="MaquinaEstados"]
script = ExtResource("10_6jemd")

[node name="JugadorDashAtt" type="Node" parent="MaquinaEstados"]
script = ExtResource("11_uyyhx")

[node name="JugadorCharging" type="Node" parent="MaquinaEstados"]
script = ExtResource("12_oiriu")

[node name="JugadorAtaqueP" type="Node" parent="MaquinaEstados"]
script = ExtResource("13_dhhti")

[node name="JugadorHerido" type="Node" parent="MaquinaEstados"]
script = ExtResource("14_5ch58")

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="animation_finished" from="Animaciones" to="." method="_on_Anim_Sprite_animation_finished"]
[connection signal="depleted" from="Salud" to="." method="_on_salud_depleted"]
[connection signal="temporal_damage" from="ElementalState" to="." method="_on_elemental_state_temporal_damage"]
